--- a/templates/pages/search.html.twig
+++ b/templates/pages/search.html.twig
@@ -1,4 +1,3 @@
-
 {% extends 'base.html.twig' %}
 {% set search_link_text = 'Search different dates' %}
 {% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
@@ -27,7 +26,8 @@
                     {% endif %}
                 {% endif %}
 
-                <div id="search_form" class="jumbotron{% if results is defined and results != false %} d-none{% endif  %}">
+                <div id="search_form"
+                     class="jumbotron{% if results is defined and results != false %} d-none{% endif %}">
                     {{ form_start(form) }}
 
                     {{ form_row(form.date_start) }}
@@ -42,6 +42,44 @@
             </div>
         </div>
     </div>
+
+    {% if results is defined and results == true %}
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="card">
+                    <picture>
+                        <source media="(min-width: 768px)"
+                                srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-5-md.jpg">
+                        <img class="card-img-top" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-5-sm.jpg">
+                    </picture>
+                    <div class="card-body">
+                        <h5 class="display-4">Executive Queen Room</h5>
+                        <ul>
+                            <li>Size: 40 sq m</li>
+                            <li>Beds: 1 Queen(s)</li>
+                        </ul>
+
+                        <dl class="list-inline">
+                            <dt>Amenities include:</dt>
+                            <dd class="list-inline-item">Free WI-FI access</dd>
+                            <dd class="list-inline-item">Flat screen TV</dd>
+                            <dd class="list-inline-item">DVD player</dd>
+                            <dd class="list-inline-item">Tea &amp; coffee making facilities</dd>
+                        </dl>
+                        <dl class="list-inline">
+                            <dt>Your selected dates:</dt>
+                            <dd>Check-In: {{ searchData.getDateStart().format('jS F Y') }}</dd>
+                            <dd>Check-Out: {{ searchData.getDateEnd().format('jS F Y') }}</dd>
+
+                        </dl>
+                    </div>
+                    <div class="card-footer text-center">
+                        <button type="button" class="btn btn-success">Proceed</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 
 {% endblock %}
 
@@ -83,17 +121,17 @@
 {% endblock %}
 
 {% block javascripts %}
-<script type="text/javascript">
-    $('#open_search').click(function(e) {
-        e.preventDefault();
+    <script type="text/javascript">
+        $('#open_search').click(function (e) {
+            e.preventDefault();
 
-        if ($('#search_form').hasClass('d-none')) {
-            $('#search_form').removeClass('d-none');
-            $(this).text('Hide search form');
-        } else {
-            $('#search_form').addClass('d-none');
-            $(this).text('{{ search_link_text }}');
-        }
-    })
-</script>
+            if ($('#search_form').hasClass('d-none')) {
+                $('#search_form').removeClass('d-none');
+                $(this).text('Hide search form');
+            } else {
+                $('#search_form').addClass('d-none');
+                $(this).text('{{ search_link_text }}');
+            }
+        })
+    </script>
 {% endblock %}
