Seperated out price and currency symbol to allow price to be stored in database

--- a/templates/booking/home.html.twig
+++ b/templates/booking/home.html.twig
@@ -55,7 +55,7 @@
                     <div class="card-footer text-center">
 
                         Total price for your stay:
-                        <strong>{{ availableData.getPrice() }}</strong>
+                        <strong>{{ availableData.getCurrencySymbol() }}{{ availableData.getPrice() }}</strong>
                     </div>
                 </div>
             </div>
