--- a/templates/pages/search.html.twig
+++ b/templates/pages/search.html.twig
@@ -79,7 +79,7 @@
                                                     </dl>
                         <dl class="list-inline">
                             <dt>Total price for your stay:</dt>
-                            <dd class="display-4">{{ searchData.getPrice() }}</dd>
+                            <dd class="display-4">{{ searchData.getCurrencySymbol() }}{{ searchData.getPrice() }}</dd>
                         </dl>
                     </div>
                     <div class="card-footer text-center">
