--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta id="vp" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
     <script>
         window.onload = function() {
             if (screen.width < 276) {
@@ -27,23 +27,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item{% if selectedNav is defined and selectedNav == 'home' %} active{% endif %}">
+            <li class="nav-item{% if selectedNav is defined and selectedNav == 'admin-home' %} active{% endif %}">
                 <a href="{{ path('admin-home') }}" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item dropdown{% if selectedNav is defined and selectedNav == 'admin-pages' %} active{% endif %}">
+                <a href="#" class="nav-link dropdown-toggle" id="navbarPagesDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                <div class="dropdown-menu" aria-labelledby="navbarPagesDropdownMenuLink">
+                    <a class="dropdown-item">Create New Page</a>
+                    <a class="dropdown-item">Settings</a>
+                </div>
             </li>
         </ul>
     </div>
 </nav>
-
-{% if disablePanoramicView is not defined %}
-    <div class="container-fluid">
-
-    <div class="row">
-        <div class="col img-fluid" id="pano" style="background-repeat: no-repeat; height: 320px; background-size: cover; background-position:center;">
-
-        </div>
-    </div>
-</div>
-{% endif %}
 
 {% block body %}{% endblock %}
 
