UI tweaks to Admin

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -5,6 +5,7 @@
     <meta id="vp" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="/bundles/css/open-iconic-bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
@@ -33,8 +34,8 @@
             <li class="nav-item dropdown{% if selectedNav is defined and selectedNav == 'admin-pages' %} active{% endif %}">
                 <a href="#" class="nav-link dropdown-toggle" id="navbarPagesDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                 <div class="dropdown-menu" aria-labelledby="navbarPagesDropdownMenuLink">
-                    <a class="dropdown-item">Create New Page</a>
-                    <a class="dropdown-item">Settings</a>
+                    <a class="dropdown-item"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> Create New Page</a>
+                    <a class="dropdown-item"><span class="oi oi-cog" title="icon name" aria-hidden="true"></span> Settings</a>
                 </div>
             </li>
         </ul>
