Enabled allowing of adding multiple of content areas

--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -5,32 +5,59 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col">
                 <h1 class="display-3">Create a new page</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <ul class="nav flex-column nav-pills" id="subnav">
+                    <li class="nav-item" id="subnav--core">
+                        <a class="nav-link active" href="#">Core Options</a>
+                    </li>
+                    <li class="nav-item dropdown" id="subnav--opts">
+                        <a class="nav-link disabled dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Content Options</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item js--add-text_heading_type" href="#" data-target=".text_heading_type_container">Add Header</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Separated link</a>
+                        </div>
+                    </li>
+                    <li class="nav-item" id="subnav--prev">
+                        <a class="nav-link disabled" href="#">Preview</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-9">
                 <div class="jumbotron">
-                    {{ form_start(form) }}
-
+                    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                     {{ form_errors(form) }}
 
+                    <div id="form-core-options">
+                        {{ form_row(form.page_route) }}
 
-                    {%-  block PageType_widget -%}
-                        <div class="form-group">
-                            {{ form_label(form.page_type) }}
-                            {{ form_widget(form.page_type) }}
-                            <small id="page_type_helper" class="form-text text-muted">
-                                Landing Page: Large background image with required form only<br>
-                                Content Page: Optional Panoramic image with a wide range of content options
-                            </small>
-                        </div>
+                        {%- block PageType_widget -%}
+                            <div class="form-group">
+                                {{ form_label(form.page_type) }}
+                                {{ form_widget(form.page_type) }}
+                                {{ form_errors(form.page_type) }}
+                                <small id="page_type_helper" class="form-text text-muted">
+                                    Landing Page: Large background image with required form only<br>
+                                    Content Page: Optional Panoramic image with a wide range of content options
+                                </small>
+                            </div>
 
-                    {%- endblock -%}
+                        {%- endblock -%}
+                    </div>
 
-                    {%- block textheadintype_widget -%}
-                        <div style="display:none;" class="text_heading_type">
+                    {%- block TextHeadingType_widget -%}
+                        <div style="display:none;" class="text_heading_type_container" data-counter="0" data-element-wrapper="{{ '<div class="col"></div>'|e }}" data-template="{{ '<div class="text_heading_type" data-counter="#NEWCOUNTER#"><div class="form-row">#FORMELEMENTS#</div><div class="invisible card card-body" id="js--text_heading_preview"></div>'|e }}">
                             <div class="form-row">
-                            {{ form_widget(form.text_heading_type) }}
-                            {{ form_widget(form.text_heading_css_class) }}
-                            {{ form_widget(form.text_heading_text_value) }}
+                                {{ form_widget(form.text_heading_type) }}
+                                {{ form_widget(form.text_heading_css_class) }}
+                                {{ form_widget(form.text_heading_text_value) }}
                             </div>
                             <div class="invisible card card-body" id="js--text_heading_preview">
 
@@ -49,20 +76,57 @@
 {% block javascripts %}
     <script type="text/javascript">
         $(document).ready(function () {
-           $('#page_page_type').on('change', function(e) {
+            $('#page_submit').on('click', function (e) {
+                e.preventDefault();
 
-           });
+                var ele = $(this);
 
-           $('.text_heading_type').on('change', 'input,select', function(e) {
-                var container = $(this).closest('.text_heading_type');
-                var htmlBuild = '<' +
-                    $(container).find('select[id^="page_text_heading_type"]').val() + ' class="' +
-                    $(container).find('select[id^="page_text_heading_css_class"]').val() + '">' +
-                    $(container).find('input[id^="page_text_heading_text_value"]').val() +
-                   '</' + $(container).find('select[id^="page_text_heading_type"]').val() + '>';
-                $('#js--text_heading_preview').removeClass('invisible');
-                $('#js--text_heading_preview').html(htmlBuild);
-           })
+                if (ele.data('role') === 'core') {
+
+                    $('#form-core-options').find('input,select').attr('disabled', true);
+                    $('#subnav--core>a').removeClass('active').addClass('disabled');
+                    $('#subnav--opts>a').removeClass('disabled').addClass('active');
+
+                    $('#page_submit').data('role', 'opt');
+                }
+
+            });
+
+            $('#subnav--opts').on('click', '.dropdown-item', function(e) {
+                e.preventDefault();
+
+                var ele = $(this);
+
+                        classN = $(ele).data('target') + ':last';
+                        if ($(classN).css('display') === 'none') {
+                            $(classN).show();
+                        } else {
+                            var fields = jQuery(jQuery(this).data('target'));
+                            // Try to find the counter of the list
+                            var counter = fields.data('counter');
+                            counter++;
+
+
+                            var newWidget = fields.find('*[data-prototype]');
+                            var htmlStr = '';
+                            $.each(newWidget, function(a, b) {
+                                var h = $('<body>');
+                                if (fields.data('element-wrapper')) {
+                                    $(h).append($(fields.data('element-wrapper')).append($(b).data('prototype').toString().replace(/__name__/g, counter))).html();
+                                }
+                                // console.log($(h).html(), $(b).data('prototype').toString().replace(/__name__/g, counter), $(h).html($(b).data('prototype').toString().replace(/__name__/g, counter)).html());
+
+                                console.log($(h).html());
+                                htmlStr += $(h).html();
+                            });
+                            fields.data('counter', counter);
+
+                            var newElem = jQuery(fields.data('template').replace('#FORMELEMENTS#', htmlStr).replace('#NEWCOUNTER#', counter));
+                            newElem.appendTo(fields);
+                        }
+
+            });
+
         });
     </script>
 {% endblock %}
