--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -20,7 +20,7 @@
                            aria-haspopup="true" aria-expanded="false" href="#">Content Options</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item js--add-text_heading_type" href="#"
-                               data-target=".text_heading_type_container">Add Header</a>
+                               data-target="#text_heading_type_container">Add Header</a>
                             <a class="dropdown-item" href="#">Another action</a>
                             <a class="dropdown-item" href="#">Something else here</a>
                             <div class="dropdown-divider"></div>
@@ -34,28 +34,31 @@
             </div>
             <div class="col-9">
                 <div class="jumbotron">
+
                     {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                     {{ form_errors(form) }}
-
                     <div id="form-core-options">
                         {{ form_row(form.page_route) }}
-
-                        {%- block PageType_widget -%}
-                            <div class="form-group">
-                                {{ form_label(form.page_type) }}
-                                {{ form_widget(form.page_type) }}
-                                {{ form_errors(form.page_type) }}
-                                <small id="page_type_helper" class="form-text text-muted">
-                                    Landing Page: Large background image with required form only<br>
-                                    Content Page: Optional Panoramic image with a wide range of content options
-                                </small>
-                            </div>
-
-                        {%- endblock -%}
+                        <div class="form-group">
+                            {{ form_label(form.page_type) }}
+                            {{ form_widget(form.page_type) }}
+                            {{ form_errors(form.page_type) }}
+                            <small id="page_type_helper" class="form-text text-muted">
+                                Landing Page: Large background image with required form only<br>
+                                Content Page: Optional Panoramic image with a wide range of content options
+                            </small>
+                        </div>
                     </div>
+                    <div id="form-opt-options">
 
+                    </div>
+                    {{ form_row(form.submit) }}
+                    {# render_rest is set to false as we do not want to submit all non-needed fields #}
+                    {{ form_end(form, {'render_rest': false}) }}
+
+                    {# The following are placeholders when adding elements are added dynamically #}
                     {%- block TextHeadingType_widget -%}
-                        <div style="display:none;" class="text_heading_type_container" data-counter="0"
+                        <div style="display:none;" id="text_heading_type_container" data-counter="0"
                              data-element-wrapper="{{ '<div class="col"></div>'|e }}"
                              data-template="{{ '<div class="text_heading_type" data-counter="#NEWCOUNTER#"><div class="form-row">#FORMELEMENTS#</div><div class="invisible card card-body" id="js--text_heading_preview"></div>'|e }}">
                             <div class="form-row">
@@ -68,12 +71,7 @@
                             </div>
                         </div>
                     {%- endblock -%}
-
-                    {%- block DisplayOrderType_widget -%}
-                        {{ form_widget(form.display_order) }}
-                    {%- endblock -%}
-
-                    {{ form_end(form) }}
+                    {{ form_widget(form.display_order) }}
                 </div>
             </div>
         </div>
@@ -108,35 +106,26 @@
 
                 var ele = $(this);
 
-                classN = $(ele).data('target') + ':last';
-                if ($(classN).css('display') === 'none') {
-                    $(classN).show();
-                } else {
-                    var fields = jQuery(jQuery(this).data('target'));
-                    // Try to find the counter of the list
-                    var counter = fields.data('counter');
-                    counter++;
+                var fields = jQuery(jQuery(this).data('target'));
+                // Try to find the counter of the list
+                var counter = fields.data('counter');
+                counter++;
 
 
-                    var newWidget = fields.find('*[data-prototype]');
-                    var htmlStr = '';
-                    $.each(newWidget, function (a, b) {
-                        var h = $('<body>');
-                        if (fields.data('element-wrapper')) {
-                            $(h).append($(fields.data('element-wrapper')).append($(b).data('prototype').toString().replace(/__name__/g, counter))).html();
-                        }
-                        htmlStr += $(h).html();
-                    });
-                    fields.data('counter', counter);
+                var newWidget = fields.find('*[data-prototype]');
+                var htmlStr = '';
+                $.each(newWidget, function (a, b) {
+                    var h = $('<body>');
+                    if (fields.data('element-wrapper')) {
+                        $(h).append($(fields.data('element-wrapper')).append($(b).data('prototype').toString().replace(/__name__/g, counter))).html();
+                    }
+                    htmlStr += $(h).html();
+                });
+                fields.data('counter', counter);
 
-                    var newElem = jQuery(fields.data('template').replace('#FORMELEMENTS#', htmlStr).replace('#NEWCOUNTER#', counter));
-                    newElem.appendTo(fields);
-
-                    $('#page_display_order').append('<input type="hidden" ' +
-                        'id="page_display_order_' + counter + '" ' +
-                        'name="page[display_order][' + counter + ']" ' +
-                        'value="' + (parseInt($('#page_display_order').children().length)+parseInt(1)) +'" />')
-                }
+                var newElem = jQuery(fields.data('template').replace('#FORMELEMENTS#', htmlStr).replace('#NEWCOUNTER#', counter));
+                $('#form-opt-options').append(newElem.css('display', 'block'));
+                $('#form-opt-options').after(jQuery('#page_display_order').data('prototype').toString().replace(/__name__/g, counter).replace('#NEWCOUNTER#', $('#form-opt-options>div').length));
 
             });
 
