--- a/templates/admin/pages.create.html.twig
+++ b/templates/admin/pages.create.html.twig
@@ -21,8 +21,8 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item js--add-text_heading_type" href="#"
                                data-target="#text_heading_type_container">Add Header</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item js--add-text_leading" href="#"
+                               data-target="#text_leading_container">Add Leading Paragraph</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Separated link</a>
                         </div>
@@ -69,6 +69,12 @@
                             <div class="invisible card card-body" id="js--text_heading_preview">
 
                             </div>
+                        </div>
+                    {%- endblock -%}
+                    {%- block TextLeading_widget -%}
+                        <div style="display: none" id="text_leading_container" data-counter="0"
+                             data-template="{{ '<div class="text_leading" data-counter="#NEWCOUNTER#">#FORMELEMENTS#<div class="invisible card card-body" id="js--text_leading_preview"></div>'|e }}">
+                            {{ form_widget(form.text_leading) }}
                         </div>
                     {%- endblock -%}
                     {{ form_widget(form.display_order) }}
@@ -118,6 +124,8 @@
                     var h = $('<body>');
                     if (fields.data('element-wrapper')) {
                         $(h).append($(fields.data('element-wrapper')).append($(b).data('prototype').toString().replace(/__name__/g, counter))).html();
+                    } else {
+                        $(h).append($(b).data('prototype').toString().replace(/__name__/g, counter)).html();
                     }
                     htmlStr += $(h).html();
                 });
